--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section>
         <h2>About Me</h2>
         <img src="pics\1266207200.png" border-radius: 50%;>
-        <p>I'm an intermediate-level programmer who specializes in web and logo design. I also have a few skills in Java and Python</p>
+        <p>I'm an intermediate-level programmer who specializes in web and logo design. I also have a few skills in Java and Python.</p>
     </section>
 
     <section>
